fix overflow

--- a/css/main.css
+++ b/css/main.css
@@ -1560,6 +1560,8 @@ text-align: center;
 
 footer{
   position: relative;
+  width: 100%;
+  overflow: hidden;
 }
 .back_video{
   position: absolute;
